moved model location

--- a/.gitignore
+++ b/.gitignore
@@ -8712,3 +8712,7 @@ hexsite/backend/images/not/ukbench01867.jpg
 hexsite/backend/images/not/ukbench01868.jpg
 hexsite/backend/images/not/ukbench01869.jpg
 hexsite/backend/images/not/ukbench01870.jpg
+hexsite/backend/007.png
+hexsite/backend/008.png
+hexsite/backend/009.png
+hexsite/backend/011.png
